--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,14 @@ android {
     dataBinding {
         enabled true
     }
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.mustafayusef.sharay"
-        minSdkVersion 17
-        targetSdkVersion 28
+        minSdkVersion 16
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -72,4 +73,15 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
     implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.1'
 
+
+
+//    implementation 'com.asksira.android:bsimagepicker:1.2.2'
+//
+//    implementation 'com.github.jkwiecien:EasyImage:3.0.1'
+//
+// //   implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+//
+//    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.1.0'
+//    // for experimental rx picker
+//    implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.1.0'
 }
