--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,19 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
             android:allowBackup="true"
             android:icon="@drawable/icon"
             android:label="@string/app_name"
             android:roundIcon="@drawable/icon"
-            android:supportsRtl="true"
+
             android:theme="@style/AppTheme">
+
+
         <activity android:name=".ui.main.carStores.storeCar">
         </activity>
         <activity android:name=".ui.splash.Lottie">
@@ -20,11 +25,13 @@
         <activity android:name=".ui.splash.splashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.MainActivity"
+                  android:windowSoftInputMode="adjustPan">
+
         </activity>
     </application>
 
